get youtube video info

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
         "label": "Generate Requirements",
         "type": "shell",
         "command": "python -m pigar generate",
+        "problemMatcher": []
       }
     ]
   }
